<resources>
    <string name="app_name">图书管理系统</string>

    <!-- 登录页 -->
    <string name="btn_login">登录</string>
    <string name="hint_username">请输入用户名</string>
    <string name="hint_pwd">请输入密码</string>

    <!--添加读者页面-->
    <string name="reader_name">读者姓名</string>
    <string name="reader_type">读者类型</string>
    <string name="gender">性别：</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="enroll_date">选择登记日期</string>
    <string name="ID">一卡通账号</string>
    <string name="email">邮箱</string>
    <string name="remark">备注信息</string>
    <string name="add_reader">添加读者</string>
    <string name="contact_way">联系方式</string>

    <!--添加读者类型-->
    <string name="type_name">种类名称</string>
    <string name="borrow_count">借书数量</string>
    <string name="borrow_mon">借书期限(单位：月)</string>
    <string name="expire_date">设置失效日期</string>
    <string name="add_reader_type">新建读者类型</string>

    <!--添加书籍类型-->
    <string name="add_book_type">新建书籍类型</string>
    <string name="keyword">关键词（用逗号分隔）</string>
    <string name="select_all">全选</string>
    <string name="cancel">取消</string>
    <string name="delete">删除</string>

    <string name="modify">修改</string>
    <string name="not_found">未找到相关内容</string>

    <!--添加书籍-->
    <string name="publish_date">选择出版日期</string>
    <string name="price">价格(RMB)</string>
    <string name="page_num">页数</string>
    <string name="book_name">书名</string>
    <string name="book_type">图书类型:</string>
    <string name="author_name">作者名称</string>
    <string name="press_name">出版社名称</string>
    <string name="add_book">添加书籍</string>

    <string name="borrow">借阅</string>
    <string name="reader_card_number">一卡通账号</string>
    <string name="borrow_book_number">借阅的图书编号</string>
    <string name="return_book_number">归还的图书编号</string>
    <string name="return_book">还书</string>
    <string name="has_not_borrow_book">没有借阅过书籍</string>

</resources>
