<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/main_background"
    android:orientation="vertical"
    tools:context=".activity.AddReaderActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

        <android.support.design.widget.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:hint="@string/reader_name"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/et_reader_name"
                style="@style/TextInputLayoutStyle" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:hint="@string/ID"
            >

            <EditText
                android:id="@+id/et_home_address"
                style="@style/TextInputLayoutStyle"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reader_type"
                android:textSize="18sp"/>

            <Spinner
                android:id="@+id/sp_reader_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/gender"
                android:textSize="18sp"/>

            <RadioGroup
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_man"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/man"
                    android:textSize="18sp"/>

                <RadioButton
                    android:id="@+id/rb_women"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/woman"
                    android:textSize="18sp"/>
            </RadioGroup>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_enroll_date"
            style="@style/TvDateStyle"
            android:clickable="true"
            android:layout_marginTop="10dp"
            android:text="@string/enroll_date"
            android:textSize="18sp"/>

        <android.support.design.widget.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:hint="@string/contact_way"
            >

            <EditText
                android:id="@+id/et_phone"
                style="@style/TextInputLayoutStyle"
                android:inputType="phone"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:hint="@string/email"
            >

            <EditText
                android:id="@+id/et_email"
                style="@style/TextInputLayoutStyle"
                android:inputType="textEmailAddress"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:hint="@string/remark">

            <EditText
                android:id="@+id/et_remark"
                style="@style/TextInputLayoutStyle"
                android:inputType="textEmailAddress"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_add_reader"
            style="@style/BtnAddStyle"
            android:text="@string/add_reader"/>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>